objects/Organization_Event__e.object
<CustomObject>
    <description>Generic Organization platform event channel for triggered platform events</description>
    <fields>
        <fullName>Changed_By_Sf_User_Id__c</fullName>
        <label>Changed By Sf User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Username__c</fullName>
        <label>Changed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Guid__c</fullName>
        <description>Org Guid</description>
        <label>Organization Guid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Org Id</description>
        <label>Organization Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>Event type</description>
        <label>event type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Organization Event</label>
    <pluralLabel>Organization Events</pluralLabel>
</CustomObject>